# ImageViewer

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  TEST_REPORT.md  create-dmg.sh  generate_test_images.rs  image-viewer-design.md  image-viewer-spec.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: ci.yml  release.yml
assets/icon/: icon.icns
docs/: image-viewer-spec.md
scripts/: generate_icon.py
src/: app.rs  file_manager.rs  fullscreen.js  fullscreen.test.js  image_cache.rs  image_loader.rs  loadPath.js  loadPath.test.js  macos_integration.rs  main.js  main.rs  menuActions.js  menuActions.test.js  shortcuts.js  shortcuts.test.js  shortcutsOverlay.test.js  theme.js  theme.test.js  zoom.js  zoom.rs  zoom.test.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  menu.rs
src-tauri/tests/: image_operations_test.rs
src/ui/: mod.rs  theme.rs  thumbnail.rs
tests/: icon_test.rs
