[package]
name = "image_viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.13", features = ["image", "tokio"] }
image = { version = "0.25", features = ["jpeg", "png", "gif", "bmp", "webp", "tiff"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
lru = "0.12"
thread-priority = "1.2"

[dev-dependencies]
tempfile = "3.13"

[profile.release]
opt-level = 3
lto = true

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5.2"
objc2-app-kit = "0.2.2"
foundation = { package = "objc2-foundation", version = "0.2.2", features = ["NSNotification", "NSDictionary", "NSArray", "NSString"] }
